# datapilot-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md
evals/: cases.jsonl
sample_data/: sales_demo.xlsx
src/datapilot/: __init__.py  api.py  cli.py  config.py  datasets.py  engine.py  evaluator.py  models.py  service.py  sql_safety.py
src/datapilot/static/: app.js  index.html  styles.css
tests/: test_api.py  test_datasets.py  test_engine.py  test_evaluator.py  test_openai_engine.py  test_service.py  test_sql_safety.py
