[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "datapilot-agent"
version = "0.1.0"
description = "A read-only data analysis agent for Excel and CSV files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2,<2",
  "fastapi>=0.115,<1",
  "openai-agents>=0.2",
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<4",
  "pydantic>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
datapilot = "datapilot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datapilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
